--- a/src/index.css
+++ b/src/index.css
@@ -72,9 +72,38 @@
 
     --radius: 0.5rem;
 }
+@font-face {
+  font-family: 'UncutSans';
+  src: url('./fonts/UncutSans-Regular.woff') format('woff')
+}
+
+@font-face {
+  font-family: BL;
+  src: url('./fonts/BL/BLMelody-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: BL;
+  src: url('./fonts/BL/BLMelody-Medium.woff') format('woff');
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: BL;
+  src: url('./fonts/BL/BLMelody-SemiBold.woff') format('woff');
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: BL;
+  src: url('./fonts/BL/BLMelody-Bold.woff') format('woff');
+  font-weight: 900;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'BL', 'UncutSans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -84,4 +113,16 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+*>a:hover {
+  color: var(--secondary) !important;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: "→ ";
 }
