--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -47,3 +47,13 @@
 .section>*:last-child {
     border-bottom: none;
 }
+.text-links {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.text-links>a {
+    color: gray;
+    text-decoration: underline;
+    padding: 0 var(--spacing-medium) 0 0;
+}
