--- a/src/components/header.css
+++ b/src/components/header.css
@@ -28,8 +28,14 @@
     background-color: var(--background);
 }
 
-#navigation a {
+#navigation {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#navigation>a {
     color: var(--muted);
-    margin: 0 var(--spacing-small) 0 0;
+    margin: 0 var(--spacing-medium) 0 0;
     font-size: 1.2em;
 }
+
