--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -57,3 +57,20 @@
     text-decoration: underline;
     padding: 0 var(--spacing-medium) 0 0;
 }
+.desktop {
+    display: block;
+}
+
+.mobile {
+    display: none;
+}
+
+@media screen and (max-width: 768px) {
+    .desktop {
+        display: none;
+    }
+
+    .mobile {
+        display: block;
+    }
+}
