--- a/src/App.css
+++ b/src/App.css
@@ -2,27 +2,27 @@
   padding-left: var(--padding-medium);
     padding-right: var(--padding-medium);
     max-width: 100%;
-    height: 100vh;
+    height: 100dvh;
 }
 
 .App-logo {
-  height: 30vh;
+  height: 30dvh;
 }
 .page-content {
   /* 
     Calculate the height of the page content by subtracting the height of the header
     headerHeight = 1.5rem + var(--padding-large) + var(--padding-medium) + 1rem
   */
-  height: calc(100vh - 1.5rem - var(--padding-large) - var(--padding-medium) - 2rem);
+  height: calc(100dvh - 1.5rem - var(--padding-large) - var(--padding-medium) - 2rem);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 48rem) {
   .page-content {
     /* 
       Calculate the height of the page content by subtracting the height of the header
       headerHeight = 1.5rem + var(--padding-large) + var(--padding-medium) + 3rem
     */
-    height: calc(100vh - 1.5rem - var(--padding-large) - var(--padding-medium) - 4rem);
+    height: calc(100dvh - 1.5rem - var(--padding-large) - var(--padding-medium) - 4rem);
   }
 }
 
@@ -43,7 +43,7 @@
   }
   
   .full-height {
-    min-height: 100vh;
+    min-height: 100dvh;
   }
   
   .socials {
@@ -57,4 +57,9 @@
     margin: 0 0.5em;
     width: 2em;
     height: 2em;
+    transition: filter var(--transition-duration) var(--transition-easing);
+  }
+  
+  [data-theme="dark"] .social-icon {
+    filter: invert(1);
   }
