--- a/src/components/scrollable-container/styles.css
+++ b/src/components/scrollable-container/styles.css
@@ -8,25 +8,26 @@
 }
 
 .border-bottom {
-    border-bottom: 1px solid var(--border-color);
+    border-bottom: 0.0625rem solid hsl(var(--border-color));
 }
 
 .border-top {
-    border-top: 1px solid var(--border-color);
+    border-top: 0.0625rem solid hsl(var(--border-color));
 }
 
 .border-left {
-    border-left: 1px solid var(--border-color);
+    border-left: 0.0625rem solid hsl(var(--border-color));
 }
 
 .border-right {
-    border-right: 1px solid var(--border-color);
+    border-right: 0.0625rem solid hsl(var(--border-color));
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 48rem) {
     .scrollable-container {
         padding: 0;
         width: 100%;
         overflow: visible;
     }
 }
+
